# GEngine

./: README.md  main.cpp  meson.build
include/: base.hpp  ui.hpp
src/: base.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp  main.cpp  ui.cpp
